# kaolinite

./: .gitignore  .todo.md  CHANGELOG.md  Cargo.toml  README.md
examples/: .demo.rs.swp  benchmark.rs  demo.rs  test2.txt  test3.txt  test4.txt  test6.txt  test8.txt
examples/cactus/: test.txt
examples/editor/: .todo.md  Cargo.toml  example.rs  keys.md  test.txt  test2.txt
examples/editor/src/: ]  main.rs
src/: .document.rs.swp  .event.rs.swp  .lib.rs.swp  .row.rs.swp  .utils.rs.swp  32  ]  document.rs  event.rs  lib.rs  row.rs  utils.rs
tests/: .test.rs.swp  ]  test.rs
