[package]
name = "kaolinite"
version = "0.3.0"
edition = "2018"
license = "MIT"
description = "A crate to assist in the creation of TUI text editors."
repository = "https://github.com/curlpipe/kaolinite"
readme = "README.md"
keywords = ["unicode", "text-processing"]
categories = ["text-processing"]

[profile.release]
debug = true

[dependencies]
once_cell = "1.8.0"
regex = "1.5.4"
unicode-width = "0.1.8"

[dev-dependencies]
sugars = "3"
