[package]
name = "kaolinite"
version = "0.4.1"
edition = "2018"
license = "MIT"
description = "A crate to assist in the creation of TUI text editors."
repository = "https://github.com/curlpipe/kaolinite"
readme = "README.md"
keywords = ["unicode", "text-processing"]
categories = ["text-processing"]

[features]
syntax_highlighting = ["synoptic"]

[profile.release]
debug = true

[dependencies]
once_cell = "1.8.0"
regex = "1.5.4"
unicode-width = "0.1.8"
synoptic = { version = "1.0.3", optional = true }

[dev-dependencies]
sugars = "3.0.0"
