[package]
name = "kaolinite"
version = "0.5.0"
edition = "2018"
license = "MIT"
description = "A crate to assist in the creation of TUI text editors."
repository = "https://github.com/curlpipe/kaolinite"
readme = "README.md"
keywords = ["unicode", "text-processing"]
categories = ["text-processing"]

[profile.release]
debug = true

[dependencies]
once_cell = "1.8.0"
regex = "1.5.4"
unicode-width = "0.1.8"
synoptic = "1.0.3"

[dev-dependencies]
sugars = "3.0.0"
